many minor edits, added HTML slideshows articles and some static images for portfolio

--- a/_harpapp/public/index.jade
+++ b/_harpapp/public/index.jade
@@ -9,12 +9,11 @@ div.covertext
       li: a(href="/about.html") About
       //li: a(href="#") What I do
       //li: a(href="/articles/") Advice & Thoughts
+      li: a(href="/weeResume/") Résumé
       li: a(href="https://twitter.com/_ndrw/favorites") What I read
       //li: a(href="#") How I work
-    ul
       li: a(href="http://designtox.tumblr.com") designtox
-      li: a(href="http://advicefromacollegedropout.com") Podcast Project
-      
+      li: a(href="/articles/") Advice &amp; Thoughts
 
 
   div.greeting
@@ -23,10 +22,10 @@ div.covertext
 
   nav.bottomBar
     ul
-      li: a(href="/about.html") Project
-      li: a(href="/weeResume/") Project
-      li: a(href="/articles/") Project
-      li: a(href="http://designtox.tumblr.com") Project
+      li: a(href="#") Project
+      li: a(href="#") Project
+      li: a(href="#") Project
+      li: a(href="#") Project
 
 
 div.cover
@@ -54,12 +53,12 @@ section.projects
     div.unit.one-of-four
       h3 routeFun
       p.
-        Volkswagen gave us a huge set of data and allowed us to build what we wanted at a hackathon sponsored by Volkswagen AG, IDEO, and MIT Media Lab. Working with a CS friend, we created a tool that approximates the funness of roads for driving enthusiasts. We presented to the Head of Marketing at VW Group.
+        Built at a hackathon sponsored by Volkswagen, IDEO, and MIT Media Lab. Working with a CS friend, we created a tool that predicts the funness of roads by various data fields collected by on-board diagnostics. We presented to a panel of judges, including the head of global marketing at VW Group.
       h4 How it works
       p.
-        The tool pulls in four data fields from VW's OBD-II dataset and calculates it using our funness model, generating an approximate funness rating for each segment of road which, when combined with smartphone GPS data, can mapped with the Google Maps API.
+        The tool pulls in four data fields from VW's OBD-II dataset and calculates it using our funness model, generating an approximate funness rating for each segment of road which, when combined with smartphone GPS data, can be mapped with the Google Maps API.
       h4 My role
-      p Prototyping, UI, front-end code
+      p Prototyping, UI, web
 
   section.a-project.d
     div.unit.three-of-four
@@ -67,36 +66,10 @@ section.projects
     div.unit.one-of-four
       h3 SwapBot
       p.
-        I created the user flow and design for the web app and coded the website. We won $500 and 3rd place at the Lincoln Labs hackathon.
+        I helped plan the user flow and led the design and coding of the website. We won 3rd place and a $500 prize at the Lincoln Labs hackathon in Oct 2013.
       h4 How it works
       p.
-        SwapBot is meant to increase clothing donations by creating a better experience for both donors and recepients. We match donors' items to those with a specific need for that item and encourage communications through our platform.
-      h4 My role
-      p UX, UI, front-end code
-
-  section.a-project.c
-    div.unit.three-of-four
-      img(src="/img/x.png")
-    div.unit.one-of-four
-      h3 tosigram
-      p.
-        I created the user flow and design for the web app and coded the website. We won $500 and 3rd place at the Lincoln Labs hackathon.
-      h4 How it works
-      p.
-        SwapBot is meant to increase clothing donations by creating a better experience for both donors and recepients. We match donors' items to those with a specific need for that item and encourage communications through our platform.
-      h4 My role
-      p UX, UI, front-end code   
-
-  section.a-project.b
-    div.unit.three-of-four
-      img(src="/img/x.png")
-    div.unit.one-of-four
-      h3 Hejia ERP
-      p.
-        I helped lead a complete redesign of Hejia's mobile ERP client, working with a small team of iOS and Android developers to implement on both platforms. It is live in the Chinese market.
-      h4 How it works
-      p.
-        One of the leading ERP providers for businesses in China, Hejia needed a 
+        SwapBot increases clothing donations by creating a better experience for both sides of the system: donors and recipients. We match donors' items to those with a specific need for that item and encourage communications through our platform.
       h4 My role
       p UX, UI
 
@@ -104,28 +77,56 @@ section.projects
     div.unit.three-of-four
       img(src="/img/x.png")
     div.unit.one-of-four
-      h3 Gainesville Tech
+      h3 tosigram
       p.
-        I did this as my first logo and identity project for the upcoming site covering the startup and technology community in Gainesville.
+        I conducted user research, interviews, data collection, 
+      h4 How it works
+      p. 
+        
+      h4 My role
+      p UX, UI  
+
+  section.a-project.b
+    div.unit.three-of-four
+      img(src="/img/Hejia-Composite.png")
+    div.unit.one-of-four
+      h3 Hejia ERP
+      p.
+        I led a complete redesign of Hejia's mobile ERP client, working with iOS and Android developers to implement on both platforms.
       h4 How it works
       p.
-        More ipsum lol ipsum heck yeah lol ipsum heck yeah lol ipsum heck yeah
-        lol ipsum heck yeah lol ipsum heck yeah
+        Hejia is one of the leading ERP companies in China, providing small and medium-sized businesses with software to manage their businesses. The recent proliferation of mobile devices has created a demand for mobile access to ERP and information capture on the go.
       h4 My role
-      p Visual design
+      p UI
+
+  section.a-project.e
+    div.unit.three-of-four
+      img(src="/img/GNV-Tech-Composite.png")
+    div.unit.one-of-four
+      h3 Gainesville Tech
+      p.
+        This was my first branding project, helping with an effort to build the tech community in my town.
+      h4 How it works
+      p.
+        Gainesville has a small but increasingly active startup community anchored by the University of Florida and Grooveshark as well as many smaller startups. Gainesville Tech aims to cover the growth of tech and startup companies.
+      h4 My role
+      p Branding
 
   section.a-project.d
     div.unit.three-of-four
-      img(src="/img/x.png")
+      img(src="/img/ArmAlarm.png")
     div.unit.one-of-four
       h3 ArmAlarm
       p.
-        My first hardware project, I helped with planning the user experience and ergonomics as well as some basic soldering. This project won 1st place at Science Hack Day (SHD) Chicago.
+        I helped plan the experience and ergonomics and assisted with soldering. Our team won 1st place of 13 teams at Science Hack Day Chicago.
       h4 How it works
       p.
-        An wrist-worn alarm clock that reads the wearer's pulse using IR and turns off only when the user raises his or her heartrate by getting out of bed and doing physical activity.
+        ArmAlarm is a prototype wrist-worn alarm clock that reads the wearer's heartrate using IR. It gently vibrates at a set time in the morning but can only be turned off by raising one's heartrate&mdash;meaning you have to get out of bed and do something physical!
       h4 My role
-      p UX
+      p UX, physical
+      p 
+        a(href="http://chicago.sciencehackday.com/") SHDCHI
+        a(href="http://www.flickr.com/photos/andrewnonumbers/sets/72157629709261784/") Photos
     
   section.a-project.c
     div.unit.three-of-four
@@ -133,13 +134,12 @@ section.projects
     div.unit.one-of-four
       h3 CMU iOS app
       p.
-        More ipsum lol ipsum heck yeah lol
+        This is a demo of something I built at my first ever hackathon, back in 2011. 
       h4 How it works
       p.
-        More ipsum lol ipsum heck yeah lol ipsum heck yeah lol ipsum heck yeah
-        lol ipsum heck yeah lol ipsum heck yeah
+        The iOS app pulls in data from feeds made available by Carnegie Mellon University and displays them in a unified app, creating a fast experience for prospective students to engage with the school, learn about what's happening, and plan a visit.
       h4 My role
-      p 
+      p Everything
 
 
 
@@ -147,7 +147,6 @@ section.projects
 section.menu
   nav.unit.one-of-four
     ul
-      li: a(href="/weeResume/") Résumé
       li: a(href="http://designtox.tumblr.com") designtox
       li: a(href="http://noodlesandbrain.tumblr.com") Noodles&Brain
       li: a(href="http://advicefromacollegedropout.com") Podcast Project
@@ -160,10 +159,10 @@ section.menu
       //li: a(href="/a/web-development-notes.html") Web dev notes
       //li: a(href="#") 10 Rules to Life
       //li: a(href="#") Recommendations
-      li: a(href="#") How to be a UX designer
+      //li: a(href="#") How to be a UX designer
   nav.unit.one-of-four
     ul
-      li: a(href="#") ndrw design lab
+      li: a(href="http://design-lab.ndrw.me/") ndrw design lab
       li: a(href="http://obnyc.tumblr.com") obnyc
   nav.unit.one-of-four
     ul
