--- a/_harpapp/public/main.less
+++ b/_harpapp/public/main.less
@@ -2,7 +2,7 @@
   Global
 ----------------*/
 
-@main: #136899;
+@main: #FF876F;
 @classy-dark-gray: #1A1A1A;
 
 body{
@@ -97,7 +97,7 @@ p{
 
 .bottomBar {
   position: absolute;
-  bottom: 0;
+  bottom: 10px;
 }
 .bottomBar ul li {
   display: inline;
@@ -144,6 +144,18 @@ nav ul li {
   font-size: 0.9rem;
   padding: 40px 20px;
 }
+.a-project a {
+  margin-right: 5px;
+  font-size: 0.75rem;
+  color: #fff;
+}
+.a-project h4 {
+  text-transform: uppercase;
+  font-size: 0.7rem;
+  font-weight: 300;
+  letter-spacing: 0.07rem;
+  margin-bottom: 5px;
+}
 
 .a {
   color: #fff;
@@ -167,6 +179,12 @@ nav ul li {
   color: #fff;
   background: #e87975;
   background: linear-gradient(45deg, #e87975 0%, #f3c49f 100%) fixed;
+}
+
+.e {
+  color: #fff;
+  background: #c4420e;
+  background: linear-gradient(45deg, #c4420e 0%, #E97547 100%) fixed;
 }
 
 
