added Warmgun, small changes, compiled:

--- a/_harpapp/public/articles/index.jade
+++ b/_harpapp/public/articles/index.jade
@@ -1,4 +1,9 @@
 h1 Advice &amp; Thoughts
-p where my articles/slides will go
+p articles/slides will go here
 
-h3: a(href="/articles/html-slideshow.html") HTML slideshow systems
+
+
+h2 Notes
+ul.majorlist
+  li: a(href="/articles/html-slideshow.html") HTML slideshow systems
+  li: a(href="/articles/warmgun-2013.html") Warmgun 2013 notes
