--- a/_harpapp/public/index.jade
+++ b/_harpapp/public/index.jade
@@ -6,11 +6,11 @@ div.covertext
 
   nav
     ul
-      li: a(href="/about.html") About
+      li: a(href="/a/about.html") About
       //li: a(href="#") What I do
       //li: a(href="/articles/") Advice & Thoughts
       li: a(href="/weeResume/") Résumé
-      li: a(href="https://twitter.com/_ndrw/favorites") What I read
+      li: a(href="https://twitter.com/_ndrw/favorites") What I'm reading
       //li: a(href="#") How I work
       li: a(href="http://designtox.tumblr.com") designtox
       li: a(href="/articles/") Advice &amp; Thoughts
