--- a/_harpapp/public/main.less
+++ b/_harpapp/public/main.less
@@ -16,7 +16,7 @@ body{
 }
 
 a {
-  color: blue;
+  color: @main;
 }
 a:hover {
   color: #1e75aa;
@@ -258,12 +258,15 @@ nav ul li {
 }
 
 
-.connect {
-  margin-top: 60px;
+.majorlist {
+  margin-top: 10px;
+  list-style: none;
 }
-.connect p a {
+.majorlist li a {
   font-size: 1.6rem;
+  padding-bottom: 20px;
   text-decoration: none;
+  display: block;
 }
 
 
