--- a/_harpapp/public/index.jade
+++ b/_harpapp/public/index.jade
@@ -7,139 +7,25 @@ div.covertext
   nav
     ul
       li: a(href="/a/about.html") About
-      //li: a(href="#") What I do
-      //li: a(href="/articles/") Advice & Thoughts
-      li: a(href="/weeResume/") Résumé
-      li: a(href="https://twitter.com/_ndrw/favorites") What I'm reading
+      li: a(href="/a/previously.html") What I've done
+      li: a(href="https://twitter.com/_ndrw/favorites") What I read
       //li: a(href="#") How I work
-      li: a(href="http://designtox.tumblr.com") designtox
-      li: a(href="/articles/") Advice &amp; Thoughts
+      li: a(href="/articles/") What I write
 
 
   div.greeting
     h3 My name is Andrew S. Chen
-    p I design things, study people, and learn about the world.
+    p Designer. Entrepreneur. Student. 
 
   nav.bottomBar
     ul
-      li: a(href="#") Project
-      li: a(href="#") Project
-      li: a(href="#") Project
-      li: a(href="#") Project
+      li: a(href="http://designtox.tumblr.com") designtox
+      li: a(href="/project") Other Projects
 
 
 div.cover
   div.separator
 
-
-
-section.projects
-  section.a-project.d
-    div.unit.three-of-four
-      img(src="/img/x.png")
-    div.unit.one-of-four
-      h3 Designership
-      p.
-        Lorem ipsum lol ipsum lol ipsum lol ipsum lol ipsum lol ipsum lol ipsum lol ipsum lol ipsum lol ipsum lol ipsum.
-      h4 How it works
-      p.
-         lol ipsum lol ipsum lol ipsum lol ipsum lol ipsum lol ipsumined with smartphone GPS data, can mapped with the Google Maps API.
-      h4 My role
-      p Role1, Role2
-
-  section.a-project.a
-    div.unit.three-of-four
-      img(src="/img/x.png")
-    div.unit.one-of-four
-      h3 routeFun
-      p.
-        Built at a hackathon sponsored by Volkswagen, IDEO, and MIT Media Lab. Working with a CS friend, we created a tool that predicts the funness of roads by various data fields collected by on-board diagnostics. We presented to a panel of judges, including the head of global marketing at VW Group.
-      h4 How it works
-      p.
-        The tool pulls in four data fields from VW's OBD-II dataset and calculates it using our funness model, generating an approximate funness rating for each segment of road which, when combined with smartphone GPS data, can be mapped with the Google Maps API.
-      h4 My role
-      p Prototyping, UI, web
-
-  section.a-project.d
-    div.unit.three-of-four
-      img(src="/img/x.png")
-    div.unit.one-of-four
-      h3 SwapBot
-      p.
-        I helped plan the user flow and led the design and coding of the website. We won 3rd place and a $500 prize at the Lincoln Labs hackathon in Oct 2013.
-      h4 How it works
-      p.
-        SwapBot increases clothing donations by creating a better experience for both sides of the system: donors and recipients. We match donors' items to those with a specific need for that item and encourage communications through our platform.
-      h4 My role
-      p UX, UI
-
-  section.a-project.c
-    div.unit.three-of-four
-      img(src="/img/x.png")
-    div.unit.one-of-four
-      h3 tosigram
-      p.
-        I conducted user research, interviews, data collection, 
-      h4 How it works
-      p. 
-        
-      h4 My role
-      p UX, UI  
-
-  section.a-project.b
-    div.unit.three-of-four
-      img(src="/img/Hejia-Composite.png")
-    div.unit.one-of-four
-      h3 Hejia ERP
-      p.
-        I led a complete redesign of Hejia's mobile ERP client, working with iOS and Android developers to implement on both platforms.
-      h4 How it works
-      p.
-        Hejia is one of the leading ERP companies in China, providing small and medium-sized businesses with software to manage their businesses. The recent proliferation of mobile devices has created a demand for mobile access to ERP and information capture on the go.
-      h4 My role
-      p UI
-
-  section.a-project.e
-    div.unit.three-of-four
-      img(src="/img/GNV-Tech-Composite.png")
-    div.unit.one-of-four
-      h3 Gainesville Tech
-      p.
-        This was my first branding project, helping with an effort to build the tech community in my town.
-      h4 How it works
-      p.
-        Gainesville has a small but increasingly active startup community anchored by the University of Florida and Grooveshark as well as many smaller startups. Gainesville Tech aims to cover the growth of tech and startup companies.
-      h4 My role
-      p Branding
-
-  section.a-project.d
-    div.unit.three-of-four
-      img(src="/img/ArmAlarm.png")
-    div.unit.one-of-four
-      h3 ArmAlarm
-      p.
-        I helped plan the experience and ergonomics and assisted with soldering. Our team won 1st place of 13 teams at Science Hack Day Chicago.
-      h4 How it works
-      p.
-        ArmAlarm is a prototype wrist-worn alarm clock that reads the wearer's heartrate using IR. It gently vibrates at a set time in the morning but can only be turned off by raising one's heartrate&mdash;meaning you have to get out of bed and do something physical!
-      h4 My role
-      p UX, physical
-      p 
-        a(href="http://chicago.sciencehackday.com/") SHDCHI
-        a(href="http://www.flickr.com/photos/andrewnonumbers/sets/72157629709261784/") Photos
-    
-  section.a-project.c
-    div.unit.three-of-four
-      <iframe width="635" height="518" src="//www.youtube.com/embed/56HjNUwjL5Y?rel=0" frameborder="0" allowfullscreen></iframe>
-    div.unit.one-of-four
-      h3 CMU iOS app
-      p.
-        This is a demo of something I built at my first ever hackathon, back in 2011. 
-      h4 How it works
-      p.
-        The iOS app pulls in data from feeds made available by Carnegie Mellon University and displays them in a unified app, creating a fast experience for prospective students to engage with the school, learn about what's happening, and plan a visit.
-      h4 My role
-      p Everything
 
 
 
@@ -154,6 +40,7 @@ section.menu
   nav.unit.one-of-four
     ul
       li: a(href="/a/one-line-book-reviews.html") One-line UX book reviews
+      li: a(href="/a/content-consumption.html") Content Consumption
       //li: a(href="/a/content-consumption.html") Content consumption
       li: a(href="/startupcities/") StartupCities
       //li: a(href="/a/web-development-notes.html") Web dev notes
