--- a/_harpapp/public/main.less
+++ b/_harpapp/public/main.less
@@ -39,6 +39,9 @@ p{
   font-weight: 300;
 }
 
+ul li {
+  font-weight: 300;
+}
 
 /*--------------
   Cover/Header
@@ -49,6 +52,9 @@ p{
   top: 0;
   left: 0;
   background-color: #fff;
+  background: url(../img/header-bg.jpg) no-repeat center top;
+  background-attachment: relative;
+  background-position: center center;
   height: 110%;
   width: 100%;
   z-index: -9;
@@ -63,7 +69,7 @@ p{
 }
 
 .menu {
-  margin-top: 100px;
+  margin-top: 700px;
 }
 
 /*.separator {
@@ -135,7 +141,7 @@ nav ul li {
 ----------------*/
 
 .projects{
-  margin-top: 900px;
+  margin-top: 100px;
 }
 
 
