small copy change

--- a/_harpapp/public/index.jade
+++ b/_harpapp/public/index.jade
@@ -7,6 +7,7 @@ div.covertext
   nav
     ul
       li: a(href="/a/about.html") About
+      li: a(href="/weeResume") Résumé
       li: a(href="/a/previously.html") What I've done
       li: a(href="https://twitter.com/_ndrw/favorites") What I read
       //li: a(href="#") How I work
