--- a/_harpapp/public/_layout.jade
+++ b/_harpapp/public/_layout.jade
@@ -14,9 +14,9 @@ html
         != yield
       footer
         p Made by <a href="/">ndrw.me</a>
-
+    
     //Google Analytics tracking code
-    <script>
+    script.
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -24,5 +24,4 @@ html
 
       ga('create', 'UA-15898503-2', 'andrewnonumbers.github.io');
       ga('send', 'pageview');
-    </script>
     
