added articles styling and it works pretty well (even though more fine tuning is needed), added _layout.jade specific to articles, changed the semantics of .mainlink and .ndrwlink so that it can work as breadcrumbs, removed startupcities to its own repo outside of this project

--- a/_harpapp/public/main.less
+++ b/_harpapp/public/main.less
@@ -94,6 +94,12 @@ ul li {
   text-decoration: none;
   font-size: 1.4rem;
   padding: 5px 20px 9px 20px;
+}
+.mainlink .ndrwlink {
+  color: @classy-dark-gray;
+  text-decoration: none;
+  font-size: 1.4rem;
+  padding: 5px 20px 9px 20px;
   border: 2px solid;  
 }
 .mainlink a:hover {
