--- a/_harpapp/public/articles/_layout.jade
+++ b/_harpapp/public/articles/_layout.jade
@@ -4,7 +4,9 @@ html
     link(rel="stylesheet", href="http://fonts.googleapis.com/css?family=Lato:100,300,400,700,300italic,400italic")
     link(rel="stylesheet", href="/firstToastGrid.css")
     //CSS reset + grid
+
     link(rel="stylesheet", href="/main.css")
+    link(rel="stylesheet", href="articlestyle.css")
 
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
   body
@@ -20,8 +22,9 @@ html
       
     div.container
       div.grid
-        p.mainlink <a href="/" class="ndrwlink">ndrw.me</a>
-        != yield
+        p.mainlink <a href="/" class="ndrwlink">ndrw.me</a> <a href="/articles">/articles</a>
+          div.articlecontent
+            != yield
       footer
         p Made by <a href="/">ndrw.me</a>
     
