--- a/_harpapp/public/articles/index.jade
+++ b/_harpapp/public/articles/index.jade
@@ -1,9 +1,16 @@
-h1 Advice &amp; Thoughts
-p articles/slides will go here
+
+h2 Articles
 
 
-
-h2 Notes
+h3 People
 ul.majorlist
-  li: a(href="/articles/html-slideshow.html") HTML slideshow systems
-  li: a(href="/articles/warmgun-2013.html") Warmgun 2013 notes
+	li: a(href="/articles/pplx-max-levchin-oct-29-berkeley.html") Max Levchin, Oct 29, Berkeley
+
+h3 Conferences
+ul.majorlist
+	li: a(href="/articles/warmgun-2013.html") Warmgun 2013 notes
+
+h3 Software
+ul.majorlist
+	li: a(href="/articles/UIST-talk-previews-Round-2-at-BiD.html") UIST talk previews Round 2 at BiD
+	li: a(href="/articles/html-slideshow.html") HTML slideshow systems
