changed home page layout so things make more sense and everything's much neater; merged into master

--- a/_harpapp/public/articles/index.jade
+++ b/_harpapp/public/articles/index.jade
@@ -5,6 +5,8 @@ h2 Articles
 h3 People
 ul.majorlist
 	li: a(href="/articles/pplx-max-levchin-oct-29-berkeley.html") Max Levchin, Oct 29, Berkeley
+	li: a(href="/articles/drew-houston.html") Drew Houston, Oct 14, Berkeley
+	li: a(href="/articles/jeff-queisser-and-sam-ghods.html") Jeff Queisser and Sam Ghods, 2 of 4 co-founders of Box, Sep 26, Berkeley
 
 h3 Conferences
 ul.majorlist
