--- a/_harpapp/public/articles/articlestyle.less
+++ b/_harpapp/public/articles/articlestyle.less
@@ -20,7 +20,7 @@ a:hover {
     margin-right: auto;
 
 
-    text-align: center;
+    text-align: left;
     font-family: 'Raleway', Helvetica, sans-serif;
     font-size: 30px;
     color: #262A27;
@@ -48,6 +48,8 @@ a:hover {
     text-transform: uppercase;
     text-align: center;
 
+    font-weight: 100;
+
   }
 
   h3 {
@@ -60,6 +62,7 @@ a:hover {
     border-bottom: 2px solid black;
 
     margin-bottom: -150px;
+
   }
 
   blockquote {
