--- a/_harpapp/public/index.jade
+++ b/_harpapp/public/index.jade
@@ -4,24 +4,17 @@ div#thebar
 div.covertext
   h1.headline Hello.
 
-  nav
-    ul
-      li: a(href="/a/about.html") About
-      li: a(href="/weeResume") Résumé
-      li: a(href="/a/previously.html") What I've done
-      li: a(href="https://twitter.com/_ndrw/favorites") What I read
-      //li: a(href="#") How I work
-      li: a(href="/articles/") What I write
-
+  p.
+    
 
   div.greeting
     h3 My name is Andrew S. Chen
-    p Designer. Entrepreneur. Student. 
+    p UX designer. Entrepreneur. Student. 
 
   nav.bottomBar
     ul
-      li: a(href="http://designtox.tumblr.com") designtox
-      li: a(href="/project") Other Projects
+      li Writer at <a href="http://designtox.tumblr.com">designtox</a>
+      li Design Lead at <a href="http://tinyterms.co">TinyTerms</a>
 
 
 div.cover
@@ -29,32 +22,52 @@ div.cover
 
 
 
-
-
 section.menu
-  nav.unit.one-of-four
+  nav.unit.one-of-three
     ul
-      li: a(href="http://designtox.tumblr.com") designtox
-      li: a(href="http://noodlesandbrain.tumblr.com") Noodles&Brain
-      li: a(href="http://advicefromacollegedropout.com") Podcast Project
+      li Work
+      //li: a(href="/a/about.html") About
+      li: a(href="/weeResume") Résumé
+      li: a(href="/a/previously.html") Case Study: Hejia
+      li: a(href="/a/previously.html") Case Study: TinyTerms
+      li: a(href="/a/previously.html") Projects
+      li: a(href="/articles/") Articles
+      li: a(href="https://twitter.com/_ndrw/favorites") Tweets I'm Reading
+      //li: a(href="#") How I work
+      
       //li: a(href="#") Shop
-  nav.unit.one-of-four
+  nav.unit.two-of-three
     ul
-      li: a(href="/a/one-line-book-reviews.html") One-line UX book reviews
-      li: a(href="/a/content-consumption.html") Content Consumption
-      //li: a(href="/a/content-consumption.html") Content consumption
-      li: a(href="/startupcities/") StartupCities
-      //li: a(href="/a/web-development-notes.html") Web dev notes
-      //li: a(href="#") 10 Rules to Life
-      //li: a(href="#") Recommendations
-      //li: a(href="#") How to be a UX designer
-  nav.unit.one-of-four
-    ul
-      li: a(href="http://design-lab.ndrw.me/") ndrw design lab
-      li: a(href="http://obnyc.tumblr.com") obnyc
-  nav.unit.one-of-four
-    ul
-      li: a(href="http://2010-2013.ndrw.me") 2010-2013.ndrw.me
-      li: a(href="http://2008-2009.ndrw.me") 2008-2009.ndrw.me
+      li Hi again
+      li.mutedtext.
+        I'm Andrew. I'm a student with a strong interest in designing experiences and digital products. <!--In the past, I've . However, what I truly love is experiences, products, behavior, and humans.-->
 
+        My life revolves around the intersection of design, technology, education, and startups.
+
+        I currently live in Berkeley, CA, but have previously lived in Chicago, Florida, New York, Beijing, Montreal, and Vancouver.
+
+        I post some quite opinionated shit on <a href="https://twitter.com/_ndrw">Twitter</a> and snap some occassional photos on <a href="https://www.flickr.com/photos/andrewnonumbers/sets">Flickr</a> and <a href="http://instagram.com/andrewnonumbers">Instagram</a>.
+  //
+    nav.unit.one-of-three
+      ul
+        li Two
+        li: a(href="http://noodlesandbrain.tumblr.com") Noodles &amp; Brain
+        li: a(href="http://advicefromacollegedropout.com") Podcast Project
+        li: a(href="/a/one-line-book-reviews.html") One-line UX book reviews
+        li: a(href="/a/content-consumption.html") Content Consumption
+        li: a(href="/startupcities/") StartupCities
+        li: a(href="#") 10 Rules to Life
+        li: a(href="#") How to be a UX designer
+    nav.unit.one-of-three
+      ul
+        li Three
+        li: a() Viatask (2011)
+        li: a(href="http://obnyc.tumblr.com") New York (2012)
+        li: a() TinyTerms (2014)
+    nav.unit.one-of-three
+      ul
+        li Four
+        li: a(href="http://design-lab.ndrw.me/") ndrw design lab
+        li: a(href="http://2010-2013.ndrw.me") 2010-2013.ndrw.me
+        li: a(href="http://2008-2009.ndrw.me") 2008-2009.ndrw.me
 
