--- a/firstToastGrid.css
+++ b/firstToastGrid.css
@@ -9,7 +9,7 @@
 	- p { margin-bottom:; }
 	- html { font:; }
 
-	Remember: no framework will be as
+	Remember: No framework will be as
 	good as a custom built, per-
 	project	one. Toast and other
 	frameworks are best used for
