made lots of changes in LESS, mainly to restyle the email collector, changed copy slightly in index Jade, added a few bgs

--- a/_harpapp/public/index.jade
+++ b/_harpapp/public/index.jade
@@ -8,13 +8,14 @@ div.covertext
     
 
   div.greeting
-    h3 My name is Andrew S. Chen
-    p UX designer. Entrepreneur. Student. 
+    h3 My name is Andrew Chen
 
   nav.bottomBar
     ul
-      li Writer at <a href="http://designtox.tumblr.com">designtox</a>
-      li Design Lead at <a href="http://tinyterms.co">TinyTerms</a>
+      li Writer of <a href="http://designtox.tumblr.com">designtox</a> tumblr
+      li Founder, Design Lead at <a href="http://tinyterms.co">TinyTerms</a>
+      //li <a href="http://designtox.tumblr.com">designtox</a> Writer
+      //li <a href="http://tinyterms.co">TinyTerms</a> Founder, Design Lead
 
 
 div.cover
@@ -42,7 +43,7 @@ section.menu
       li.mutedtext.
         I'm Andrew. I'm a student with a strong interest in designing experiences and digital products. <!--In the past, I've . However, what I truly love is experiences, products, behavior, and humans.-->
 
-        My life revolves around the intersection of design, technology, education, and startups.
+        My life revolves around the intersection of design, technology, education, and sustainability.
 
         I currently live in Berkeley, CA, but have previously lived in Chicago, Florida, New York, Beijing, Montreal, and Vancouver.
 
