added lots of project images, cleaned up, changed cover text layout so that things are dead centered

--- a/_harpapp/public/_layout.jade
+++ b/_harpapp/public/_layout.jade
@@ -22,8 +22,8 @@ html
       div.grid
         p.mainlink <a href="/" class="ndrwlink">ndrw.me</a>
         != yield
-      footer
-        p Made by <a href="/">ndrw.me</a>
+      footer.sitewide
+        p <!--Made by <a href="/">ndrw.me</a>-->
     
     
     
