--- a/_harpapp/public/a/previously.jade
+++ b/_harpapp/public/a/previously.jade
@@ -1,44 +1,16 @@
-h1 Previously...
-
-ul
-  li <span class="dates">Mar 2013</span> 1st place, IDEO JumpstART V with Duane Bray 
-
-  li 1st place, Science Hack Day Chicago 2012
-
-  li 2nd place, IMSA Power Pitch at MIT Enterprise Forum
-
-  li Best Product Demo, Outloudio, Startup Weekend Chicago
-
-  li Youngest winner of 'DEMOgod' at DEMO Spring 2012
-
-  li Selected by Twilio and SendGrid for all-expenses paid trip
-
-  li Once had a conference call with President Obama
+h1 Previously
 
 
-
-h3 Projects
+h3 
 
 include ../project/index.jade
 
-section
-  div.unit.one-of-three
-    img(src="/img/x.png")
-  div.unit.one-of-three
-    img(src="/img/x.png")
-  div.unit.one-of-three
-    img(src="/img/x.png")
-  div.unit.one-of-three
-    img(src="/img/x.png")
-  div.unit.one-of-three
-    img(src="/img/x.png")
-  div.unit.one-of-three
-    img(src="/img/x.png")
 
 
 h3 Conferences
 
 ul
-  li IoT
+  li Gigaom Roadmap 2014
   li International Startup Fest
   li Florida Student Sustainability Summit
+  li Warmgun 2013
