--- a/_harpapp/public/index.jade
+++ b/_harpapp/public/index.jade
@@ -2,20 +2,20 @@ div#thebar
   != partial("_emailcollector")
 
 div.covertext
-  h1.headline Hello.
-
-  p.
-    
-
-  div.greeting
-    h3 My name is Andrew Chen
-
-  nav.bottomBar
-    ul
-      li Writer of <a href="http://designtox.tumblr.com">designtox</a> tumblr
-      li Founder, Design Lead at <a href="http://tinyterms.co">TinyTerms</a>
-      //li <a href="http://designtox.tumblr.com">designtox</a> Writer
-      //li <a href="http://tinyterms.co">TinyTerms</a> Founder, Design Lead
+  h1.headline 
+  
+  div.dead-center
+    div.unit.span-grid
+      div.greeting
+        h3 I design products and think about technology.
+    div.unit.span-grid
+      nav.bottomBar
+        div.unit.one-of-two
+          ul
+            li Writer of <a href="http://designtox.tumblr.com">designtox</a> tumblr
+        div.unit.one-of-two
+          ul
+            li Co-founder, Design Lead at <a href="http://tinyterms.co">TinyTerms</a>
 
 
 div.cover
@@ -29,13 +29,13 @@ section.menu
       li Work
       //li: a(href="/a/about.html") About
       li: a(href="/weeResume") Résumé
-      li: a(href="/a/previously.html") Case Study: Hejia
-      li: a(href="/a/previously.html") Case Study: TinyTerms
+      //li: a(href="/a/previously.html") Case Study: Hejia
+      //li: a(href="/a/previously.html") Case Study: TinyTerms
       li: a(href="/a/previously.html") Projects
+      li: a(href="/a/favorites.html") Favorite Things
       li: a(href="/articles/") Articles
-      li: a(href="https://twitter.com/_ndrw/favorites") Tweets I'm Reading
+      //li: a(href="https://twitter.com/_ndrw/favorites") Tweets I'm Reading
       //li: a(href="#") How I work
-      
       //li: a(href="#") Shop
   nav.unit.two-of-three
     ul
@@ -48,6 +48,7 @@ section.menu
         I currently live in Berkeley, CA, but have previously lived in Chicago, Florida, New York, Beijing, Montreal, and Vancouver.
 
         I post some quite opinionated shit on <a href="https://twitter.com/_ndrw">Twitter</a> and snap some occassional photos on <a href="https://www.flickr.com/photos/andrewnonumbers/sets">Flickr</a> and <a href="http://instagram.com/andrewnonumbers">Instagram</a>.
+  
   //
     nav.unit.one-of-three
       ul
