--- a/_harpapp/public/project/index.jade
+++ b/_harpapp/public/project/index.jade
@@ -1,20 +1,47 @@
 section.projects
+
   section.a-project.a
     div.unit.three-of-four
-      img(src="/img/x.png")
+      img(src="/img/Airbnb.png")
+    div.unit.one-of-four
+      h3 Airbnb
+      p.
+        Built at a hackathon sponsored by Volkswagen, IDEO, and MIT Media Lab. Working with a CS friend, we created a tool that predicts the funness of roads by various data fields collected by on-board diagnostics. We presented to a panel of judges, including the head of global marketing at VW Group. We won the GitHub Judge's Choice award.
+      h4 How it works
+      p.
+        TinyTerms is built on a modular system
+      h4 My role
+      p UX/UI consulting
+
+  section.a-project.c
+    div.unit.three-of-four
+      img(src="/img/TinyTerms.png")
+    div.unit.one-of-four
+      h3 TinyTerms
+      p.
+        Built at a hackathon sponsored by Volkswagen, IDEO, and MIT Media Lab. Working with a CS friend, we created a tool that predicts the funness of roads by various data fields collected by on-board diagnostics. We presented to a panel of judges, including the head of global marketing at VW Group. We won the GitHub Judge's Choice award.
+      h4 How it works
+      p.
+        TinyTerms is built on a modular system
+      h4 My role
+      p Design Lead
+
+  section.a-project.a
+    div.unit.three-of-four
+      img(src="/img/routeFun.png")
     div.unit.one-of-four
       h3 routeFun
       p.
-        Built at a hackathon sponsored by Volkswagen, IDEO, and MIT Media Lab. Working with a CS friend, we created a tool that predicts the funness of roads by various data fields collected by on-board diagnostics. We presented to a panel of judges, including the head of global marketing at VW Group.
+        Built at a hackathon sponsored by Volkswagen, IDEO, and MIT Media Lab. Working with Shawn Jain, we built a tool that predicts the funness of roads by various data fields collected by a car's on-board diagnostics. We presented to a panel of judges, including the head of global marketing at VW Group.
       h4 How it works
       p.
         The tool pulls in four data fields from VW's OBD-II dataset and calculates it using our funness model, generating an approximate funness rating for each segment of road which, when combined with smartphone GPS data, can be mapped with the Google Maps API.
       h4 My role
-      p Prototyping, UI, web
+      p Prototyping, UI, web dev
 
   section.a-project.d
     div.unit.three-of-four
-      img(src="/img/x.png")
+      img(src="/img/SwapBot.png")
     div.unit.one-of-four
       h3 SwapBot
       p.
@@ -23,7 +50,7 @@ section.projects
       p.
         SwapBot increases clothing donations by creating a better experience for both sides of the system: donors and recipients. We match donors' items to those with a specific need for that item and encourage communications through our platform.
       h4 My role
-      p UX, UI
+      p UX, UI, web dev
 
   section.a-project.c
     div.unit.three-of-four
@@ -49,7 +76,7 @@ section.projects
       p.
         Hejia is one of the leading ERP companies in China, providing small and medium-sized businesses with software to manage their businesses. The recent proliferation of mobile devices has created a demand for mobile access to ERP and information capture on the go.
       h4 My role
-      p UI
+      p UI (iOS & Android)
 
   section.a-project.e
     div.unit.three-of-four
@@ -82,11 +109,11 @@ section.projects
     
   section.a-project.c
     div.unit.three-of-four
-      <iframe width="635" height="518" src="//www.youtube.com/embed/56HjNUwjL5Y?rel=0" frameborder="0" allowfullscreen></iframe>
+      <iframe width="680" height="480" src="//www.youtube.com/embed/56HjNUwjL5Y?rel=0" frameborder="0" allowfullscreen></iframe>
     div.unit.one-of-four
       h3 CMU iOS app
       p.
-        This is a demo of something I built at my first ever hackathon, back in 2011. 
+        This is a demo of something I built way back at my first ever hackathon, when I was in high school. 
       h4 How it works
       p.
         The iOS app pulls in data from feeds made available by Carnegie Mellon University and displays them in a unified app, creating a fast experience for prospective students to engage with the school, learn about what's happening, and plan a visit.
